# cmake-demo

test/: CMakeLists.txt
test2/: CMakeLists.txt  main.c
test3/: CMakeLists.txt
test4/: CMakeLists.txt  main.c
test5/: CMakeLists.txt
test5/src/: CMakeLists.txt
test6/: CMakeLists.txt
test6/src/: main.c  testFunc1.c
test7/: CMakeLists.txt
test8/: CMakeLists.txt
test8/src/: main.c
test9/: CMakeLists.txt
test9/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main1.c
test9/src/src/: Makefile  cmake_install.cmake
